Nää olis tässä nää mun korjaukset

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -187,14 +187,13 @@ publisher = {Elsevier Science \& Technology},
 
 @misc{mittariAsetus,
 title  = {Valtioneuvoston asetus sähköntoimitusten selvityksestä ja mittauksesta},
-number = {5.2.2009/66}
+note   = {5.2.2009/66}
 }
 
 @misc{reserviLaki,
 title  = {Laki sähköntuotannon ja -kulutuksen välistä tasapainoa varmistavasta tehoreservistä},
-number = {11.2.2011/117}
-}
-
+note   = {11.2.2011/117}
+} 
 @misc{enwg,
 title   = { EnWG §14a Steuerbare Verbrauchseinrichtungen in Niederspannung; Verordnungsermächtigung},
 url     = {https://www.gesetze-im-internet.de/enwg_2005/__14a.html},
@@ -238,7 +237,7 @@ school = {Metropolia Ammattikorkeakoulu}
 
 @book{sahkoverkot,
 title     = {Sähköverkot 1},
-author    = {Jarmo, Elovaara and Liisa, Haarla},
-yer       = {2011},
+author    = {Jarmo Elovaara and Liisa Haarla},
+year      = {2011},
 publisher = {Otatieto}
 }
