--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -2,7 +2,7 @@ Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähköverkossa kasvaa
 
 Aurinkosähköjärjestelmien määrän kasvu lisää sähköverkon tuotannon ailahtelevuutta ja säätövoiman tarvetta, sillä tuotanto vaihtelee tunneittain. Tuotantoa voidaan ennustaa sääennusteen pohjalta, mutta yksittäiset pilvet voivat aiheuttaa alueellisesti nopeitakin tehovaihteluita. Lisäksi huipputeho sijoittuu päiväsaikaan, joten ihmisten palatessa töistä ja kulutuksen kasvaessa tuotannon laskiessa samanaikaisesti säätötehon tarve kasvaa entisestään.
 
-Lämpöpumppujen lisääntyminen ja esimerkiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan määrittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynnistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämpöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellä mainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpumpulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
+Lämpöpumppujen lisääntyminen ja esimerkiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan määrittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynnistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämpöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellä mainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpumpulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan sähköenergian kulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
 
 Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla.
 
